src/objects/tpjFileFieldMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark true if the field is required for the upload.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObjectName__c</fullName>
        <description>API Name of the object the field mapping applies to.</description>
        <label>SObject Name</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfFieldAPIName__c</fullName>
        <description>The API Name for the field on the sObject listed in SObject Name field.</description>
        <label>SF Field API Name</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tractsCOLabel__c</fullName>
        <description>The field name supplied by files from Tracts.co</description>
        <label>Tracts.CO Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TPJ File Field Mapping</label>
    <pluralLabel>TPJ File Field Mappings</pluralLabel>
</CustomObject>